results/SpecGenBench/0-shot/log-MatrixAdd-2023_11_28_22_57_45.txt
public class MatrixAdd {
    
    //@ requires a != null && b != null;
    //@ requires a.length == 2 && b.length == 2;
    //@ requires a[0] != null && a[1] != null && b[0] != null && b[1] != null;
    //@ requires a[0].length == 2 && a[1].length == 2 && b[0].length == 2 && b[1].length == 2;
    //@ ensures \result != null;
    //@ ensures \result.length == 2;
    //@ ensures \result[0] != null && \result[1] != null;
    //@ ensures \result[0].length == 2 && \result[1].length == 2;
    //@ ensures (\forall int i; 0 <= i && i < 2; (\forall int j; 0 <= j && j < 2; \result[i][j] == a[i][j] + b[i][j]));
    public int[][] add(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        for (int i = 0; i < 2; i++) {
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][j] + b[i][j];
            }
        }
        return c;
    }

}
/home/max/Documents/JMLGPT/tmp/MatrixAdd.java:16: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][j] + b[i][j];
                  ^
  Reason: Double rewriting of ident: i i_707_707___52 i_707_721___55
1 error

